Accessibility improvment, fixed low contrast

--- a/src/app/public/summary/summary-result-page/result/result-item/result-item.component.scss
+++ b/src/app/public/summary/summary-result-page/result/result-item/result-item.component.scss
@@ -26,7 +26,7 @@
   }
   & .result-footer {
     & .more-info {
-      background: #87A4DD;
+      background: #4D6AB5;
       border: 1px solid #CBC8C8;
       color: #ffffff;
       font-weight: bold;
